# thesaurus-based-ner

./: .#TODO.org  .envrc  .gitignore  Dockerfile  Makefile  README.md  TODO.org  data  docker-compose.yml  main.py  nohup.out  outputs  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
cli/: compare_metrics.py  compare_msc_dataset.py  compare_result.py  error_analysis.py  get_umls_negative_cat.py  get_umls_negative_cats.py  multi_label_error_analysis.py  train.py  train_msmlc.py  train_span_classif.py
cli/analysis/: analyze_span_mismatch.py  check_ambiguous_terms_in_gold.py  error_analysis.py  msmlc_data_statistics.py  print_label_statistics_for_dataset.py  print_multi_label_ner.py  print_ner_dataset_dict.py  print_umls_term_count.py
cli/preprocess/: inflect_terms_of_term2cats.py  load_dictionary_form_term2cats.py  load_gold_msmlc.py  load_gold_multi_label_ner.py  load_gold_ner.py  load_msc_dataset.py  load_msmlc_dataset.py  load_negative_categories.py  load_pseudo_msmlc.py  load_pseudo_multi_label_ner.py  load_terms.py  (+8 more)
conf/: chunker  eval_config.yaml  load_msc.yaml  load_msmlc.yaml  load_term2cat.yaml  load_term2cats.yaml  multi_label_ner_model  multi_label_typer  pseudo_anno.yaml  pseudo_anno_msmlc.yaml  train_config.yaml  train_msmlc_config.yaml  train_span_classif.yaml
makefiles/: __init__.mk  dependencies.mk
notebooks/: Check FP & FN instances of DictMatch.ipynb
scripts/: basic.sh  check_dict_errosion_effect.sh  check_fn_effect.sh  check_fp_effect.sh  check_misguidance_effect.sh  check_msc_dataset.sh  check_pseudo_anno.sh  check_supervised.sh  main.sh  make_pseudo_data.sh  params.sh  raiden_cpu_server_proxy.sh  raiden_gpu_server_proxy.sh  select_1cat_exp.sh  select_1cat_exp_multi_label.sh  setup.sh  tmp.sh
src/: builder.py  evaluator.py
tests/: test_main.py
(+231 files in other folders)
