[tool.poetry]
name = "two-stage-distant-ner"
version = "0.1.0"
description = ""
authors = ["fracivilization <fractal.civilization@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.4"
flake8 = "^3.9.2"
black = "^21.7b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
