[tool.poetry]
name = "two-stage-distant-ner"
version = "0.1.0"
description = ""
authors = ["fracivilization <fractal.civilization@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.4"
flake8 = "^3.9.2"
black = "^21.7b0"
datasets = "^1.11.0"
Cython = "^0.29.24"
hydra-core = "^1.1.1"
transformers = "^4.10.0"
seqeval = "^1.2.2"
torch = "^1.9.0"
scikit-learn = "^0.24.2"
prettytable = "^2.2.0"
tensorboard = "^2.6.0"
flashtool = "^0.0.10"
psutil = "^5.8.0"
flair = "^0.9"
benepar = "^0.2.0"
flashtext = "^2.7"
inflection = "^0.5.1"
mysql-connector-python = "^8.0.26"
SPARQLWrapper = "^1.8.5"
p-tqdm = "^1.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
